--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Post and comment here on ItsABlog" />
+    <link rel="manifest" href="manifest.json" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="application-name" content="ItsABlog" />
+    <meta name="apple-mobile-web-app-title" content="ItsABlog" />
+    <meta name="theme-color" content="#2080FF" />
+    <meta name="msapplication-navbutton-color" content="#2080FF" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
+    <meta name="msapplication-starturl" content="/" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
